<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linen">

    <TextView
        android:id="@+id/tv_pantry_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingTop="20dp"
        android:paddingBottom="12dp"
        android:text="@string/nav_pantry"
        android:textAppearance="@style/TextAppearance.Pantry.ScreenTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/layout_empty_pantry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_pantry_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_empty_pantry_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_pantry_headline"
            android:textAppearance="@style/TextAppearance.Pantry.EmptyHeadline" />

        <TextView
            android:id="@+id/tv_empty_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/empty_pantry_sub"
            android:textAppearance="@style/TextAppearance.Pantry.BodyMuted" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pantry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pantry_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/btn_add_ingredient"
        android:src="@drawable/ic_add"
        app:tint="@color/ink"
        app:backgroundTint="@color/gold"
        app:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
